<resources>
    <string name="app_name">植语</string>

    <string name="Acanthaceae">爵床科</string>
    <string name="Compositae">菊科</string>
    <string name="Gramineae">禾本科</string>
    <string name="Liliaceae">百合科</string>
    <string name="Malvaceae">锦葵科</string>

    <string name="title_activity_genera">GeneraActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_send">Send</string>

    <string name="menu_recognize">植物识别</string>
    <string name="menu_search">植物搜索</string>
    <string name="menu_like">我的喜欢</string>
    <string name="menu_guess">猜你喜欢</string>
    <string name="menu_tool">设置</string>
    <string name="menu_community">社区</string>
    <string name="menu_share">分享</string>
    <string name="menu_exit">退出登陆</string>

    <string name="drawer_open">打开抽屉</string>
    <string name="drawer_close">关闭抽屉</string>

    <string name="plant_swc_describe">
        "     "多年生草本，高达1米；茎两歧分枝，几被微柔毛；叶狭卵形或卵状披针形，长6-12（-18）厘米，
        顶端渐尖或长渐尖，基部急尖，具浅波状-圆齿，上面边缘被微柔毛或光滑，钟乳体白色，粗大，
        明显。花序总状，顶生和侧生，花单生或3出而偏向一侧，花梗长1-2毫米；苞片和小苞片微小，长2-3毫米；
        花萼裂片5，披针形，长5-6毫米，与苞片和小苞片均疏生柔毛和腺毛；花冠2唇形，白带红色或紫色，
        冠管钟形，长约2 ．2厘米，外有短柔毛和腺毛，冠檐裂片5，略不等，短于花冠管3-4倍；
        雄蕊2强，2药室不等高，基部有白色小尖头；子房和花柱下部有短柔毛。
        蒴果长18-22毫米，上部具4粒种子，下部实心似细柄状。云南文山用作解热药。
    </string>

    <string name="mine_yy_space">
        "     "为君子谦谦，温和有礼，有才而不骄，得志而不傲，居于谷而不卑。
    </string>

</resources>
