<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_recognize"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_recognize" />
        <item
            android:id="@+id/nav_search"
            android:icon="@drawable/ic_menu_search"
            android:title="@string/menu_search" />
        <item
            android:id="@+id/nav_like"
            android:icon="@mipmap/like"
            android:title="@string/menu_like" />
        <item
            android:id="@+id/nav_guess"
            android:icon="@mipmap/guess"
            android:title="@string/menu_guess" />
        <item
            android:id="@+id/nav_tool"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_tool" />
    </group>

    <item android:title="@string/menu_community">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_share" />
        </menu>
    </item>

    <item
        android:id="@+id/nav_exit"
        android:icon="@drawable/ic_menu_exit"
        android:title="@string/menu_exit" />

</menu>
